Fix dark mode

--- a/demo/assets/custom.css
+++ b/demo/assets/custom.css
@@ -17,7 +17,6 @@
 }
 
 
-
 /* usage_display */
 #usage_display {
     height: 1em;
@@ -33,33 +32,31 @@ ol:not(.options), ul:not(.options) {
     padding-inline-start: 2em !important;
 }
 
-/* 亮色 */
-@media (prefers-color-scheme: light) {
-    #chuanhu_chatbot {
-        background-color: var(--chatbot-color-light) !important;
-    }
-    [data-testid = "bot"] {
-        background-color: #FFFFFF !important;
-    }
-    [data-testid = "user"] {
-        background-color: #95EC69 !important;
-    }
+/* Thank @Keldos-Li for fixing it */
+/* Light mode (default) */
+#chuanhu_chatbot {
+    background-color: var(--chatbot-color-light) !important;
+    color: #000000 !important;
 }
-/* 暗色 */
-@media (prefers-color-scheme: dark) {
-    #chuanhu_chatbot {
-        background-color: var(--chatbot-color-dark) !important;
-    }
-    [data-testid = "bot"] {
-        background-color: #2C2C2C !important;
-    }
-    [data-testid = "user"] {
-        background-color: #26B561 !important;
-    }
-    body {
-        background-color: var(--neutral-950) !important;
-    }
+[data-testid = "bot"] {
+    background-color: #FFFFFF !important;
 }
+[data-testid = "user"] {
+    background-color: #95EC69 !important;
+}
+
+/* Dark mode */
+.dark #chuanhu_chatbot {
+    background-color: var(--chatbot-color-dark) !important;
+    color: #FFFFFF !important;
+}
+.dark [data-testid = "bot"] {
+    background-color: #2C2C2C !important;
+}
+.dark [data-testid = "user"] {
+    background-color: #26B561 !important;
+}
+
 /* 屏幕宽度大于等于500px的设备 */
 @media screen and (min-width: 500px) {
     #chuanhu_chatbot {
